# CloudBots.Rover

./: .gitignore  README.md  TODO.md  build.bat  build.sh  client.py  config.ini  i.bat  main.py  out.txt  requirements.txt  stereocam.py
docs/: filters.md  main.md  movementlogic.md  rosock.md  sensor.md  tasks.md
examples/: example_cam_listener.py  example_cam_publisher.py  example_image_transfer.py  example_node_listener.py  example_node_publisher.py  example_stereocam_listener.py  example_stereocam_publisher.py  image_load_unload_test.py
interfaces/: CMakeLists.txt  package.xml
interfaces/srv/: ReceiveSensorInterface.srv  SensorInterface.srv
libs/arduino_motor/: ArduinoTestMotor.cpp  iarduino_I2C_Motor.cpp  iarduino_I2C_Motor.h  motor  motor.cpp
libs/arduino_motor/i2c/: i2c  i2c.c
libs/motor/: motor.cpp  motor.h
main/: package.xml  setup.py
main/main/: main.py
miniros/: LICENSE  pyproject.toml
miniros/src/miniros/: __init__.py  __main__.py  builtin_datatypes.py  source.py
miniros/src/miniros.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
navigation/: discover.bat  main.py  mapshrefs.txt  test.jfif
navigation/src/: imagecompare.py  imagetools.py  mapsidparser.py  realtimeiter.py  yolo.py
navigation/src/util/: binarysearch.py  regexps.py  roadlinesdetection.py
sensors/: package.xml  setup.py
sensors/sensors/: main.py
src/: filters.py  movementlogic.py  rosock.py  sensor.py  tasks.py
src/cam/: pyproject.toml
src/cam/src/cam/: __init__.py  __main__.py  datatypes.py  source.py  stereocam.py
src/cam/src/cam.egg-info/: PKG-INFO  SOURCES.txt
src/gpio_module/: pyproject.toml
src/i2c_data/: pyproject.toml
src/i2c_data/src/i2c_data/: source.py  (+1 more)
src/lidar_module/: pyproject.toml
src/movement/: pyproject.toml
src/movement/src/movement/: datatypes.py  source.py
src/movement/src/movement.egg-info/: PKG-INFO  SOURCES.txt
tests/: botmodule.py
tools/: miniros.bat  miniros.sh
(+8 files in other folders)
