[project]
name = "miniros"
version = "0.0.1"
authors = [
    { name = "Vadimych1", email = "vadimlebedenko0@gmail.com" }
]
description = "A mini version of ROS"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]