
[project]
name = "cam"
version = "1.0.0"
authors = [
    { name = "Vadimych1", email = "vadimlebedenko0@gmail.com" }
]
description = "Cam package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: None",
    "Operating System :: OS Independent",
]
