
[project]
name = "movement"
version = "1.0.0"
authors = [
    { name = "Some Author", email = "author@example.com" }
]
description = "MiniROS Package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: None",
    "Operating System :: OS Independent",
]
